# GameEngine2D

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
Engine/: CMakeLists.txt  Debug.hpp  Engine.cpp  Engine.hpp  Entity.hpp  Window.cpp  Window.hpp
Engine/Animation/: Animation.cpp  Animation.hpp  Animator.cpp  Animator.hpp
Engine/Behaviour/: Component.cpp  Component.hpp  GameObject.cpp  GameObject.hpp
Engine/CommonInclude/: CommonRender.hpp
Engine/Level/: Level.cpp  Level.hpp  LevelManager.hpp
Engine/Managers/: Input.cpp  Input.hpp  Time.cpp  Time.hpp
Engine/Rendering/: Rendering.cpp  Rendering.hpp  Rendersource.cpp  Rendersource.hpp  Shader.cpp  Shader.hpp  Sprite.cpp  Sprite.hpp
Engine/src/: Window.cpp  Window.hpp
Engine/src/Level/: Level.cpp
Engine/src/Rendering/: Rendersource.cpp  Rendersource.hpp
Game/: Game.cpp  Game.hpp  GameEngine2D.cpp  Player.hpp
Game/Levels/: FirstLevel.hpp
Resources/Shaders/: b_sprite.frag  framebuffer.frag
Shaders/: b_sprite.frag
